[package]
name = "firecore-audio-builder"
version = "0.4.0"
authors = ["Rhys Holloway <rhyswilliamholloway@gmail.com>"]
edition = "2018"

[dependencies]
firecore-audio = { git = "https://github.com/DoNotDoughnut/firecore-audio", features = ["file"] }
firecore-dependencies = { git = "https://github.com/DoNotDoughnut/firecore-dependencies", features = ["ser"] }

serde = { version = "1.0", features = ["derive"] }
ron = "0.6"